Add API Midtrans gateway

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-APP_NAME=Laravel
+APP_NAME="Wali Care"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7mcOLQUIMRQVBWlBWwb/oFrr/kIbt2g9G9kmQmy15UI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+# APP_URL=http://192.168.1.15:8000
+# VITE_HOST=192.168.1.15
+
+# https://periscopic-dudley-feebly.ngrok-free.dev/api/midtrans/callback
+# ngrok http 192.168.1.15:8000
+# php artisan serve --host=192.168.1.15 --port=8000
+# npm run dev -- --host 192.168.1.15
+
+
+
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,13 +31,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# ==============================
+# 💾 DATABASE CONFIG
+# ==============================
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=walicare
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Hasnan32@
 
+# ==============================
+# ⚙️ SESSION & CACHE
+# ==============================
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -47,19 +64,40 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# ==============================
+# 📬 MAIL CONFIG (sementara pakai log)
+# ==============================
 MAIL_MAILER=log
-MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# ==============================
+# ☁️ AWS (optional)
+# ==============================
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# ==============================
+# 🧩 FRONTEND
+# ==============================
 VITE_APP_NAME="${APP_NAME}"
+
+# ==============================
+# 💳 MIDTRANS CONFIG (Sandbox Mode)
+# ==============================
+# MIDTRANS_SERVER_KEY=Mid-server-NbAYx_GqgNhHyECsdDsmp6Ry
+# MIDTRANS_CLIENT_KEY=Mid-client-9iMFI_Kqd5dna5FL
+# MIDTRANS_IS_PRODUCTION=true
+
+
+MIDTRANS_SERVER_KEY=Mid-server-lLSLVAFaiLIdkuiAXIrXKVSi
+MIDTRANS_CLIENT_KEY=Mid-client-x8kaKtaN2wVMQyQ4
+MIDTRANS_IS_PRODUCTION=false
