--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=walicare
 DB_USERNAME=root
-DB_PASSWORD=Hasnan32@
+DB_PASSWORD=
 
 # ==============================
 # ⚙️ SESSION & CACHE
